--- a/langchain/tutorial.ipynb
+++ b/langchain/tutorial.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n",
-      "Unexpected argument 'frequency_penalty' provided to VertexAI.\n",
-      "Unexpected argument 'presence_penalty' provided to VertexAI.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# imports\n",
     "from dotenv import load_dotenv\n",
@@ -40,12 +30,10 @@
     "\n",
     "from langchain_google_vertexai.model_garden import ChatAnthropicVertex\n",
     "\n",
-    "model_name=\"gemini-2.5-pro-exp-03-25\"\n",
+    "model_name=\"gemini-2.5-pro-preview-05-06\"\n",
     "llm = VertexAI(\n",
     "    model_name=model_name,\n",
     "    temperature=0,\n",
-    "    frequency_penalty=0,\n",
-    "    presence_penalty=0,\n",
     "    top_p=1.0,)"
    ]
   },
